#88 Scrollbar fix

--- a/src/app/preview/components/dialog-home-card/home-card-dialog/home-card-dialog.component.scss
+++ b/src/app/preview/components/dialog-home-card/home-card-dialog/home-card-dialog.component.scss
@@ -161,7 +161,6 @@
     }
   }
   .status {
-    margin: 10px 0;
     .status-pending {
       display: flex;
       flex-direction: column;
